@@ -1,3 +1,6 @@
+15 July 2010: Wouter
+	- rlimit adjustments for select and ulimit can happen at the same time.
+
 14 July 2010: Wouter
 	- Donation text added to README.
 	- Fix integer underflow in prefetch ttl creation from cache.  This
